# pyke_pyxel

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  testing-todo.md
docs/: DRAWABLES.md  GAME-TYPES.md  README.md  ROADMAP.md  SPRITES.md  TESTING.md  pyke_pyxel_API.md
games/jet/: game_loop.py  map.py  player.py  sprites.py
games/jet/assets/: assets.pyxres
games/jet/enemies/: _enemies.py  spinner.py
plans/: BOARD-GAME-TYPE.md  RESEARCH-BOARDGAMEIO.md  ROADMAP.md
plans/board_game/: BOARD-DRAW.md  BOARD-GAME-TYPE.md
plans/game_creation_skill/: GAME-CREATION-SKILL.md  GAME-DEFINITION-TEMPLATE.md  GAME-SPEC-TEMPLATE.md  RESEARCH-RPG.md  RESEARCH-SIMPLE.md
plans/game_creation_skill/templates/game/: game_load.py  game_loop.py  main.py
plans/game_creation_skill/templates/rpg/: game_loop.py  main.py
pyke_pyxel/: _types.py
pyke_pyxel/effects/: _splatter.py
pyke_pyxel/rpg/: __init__.py  _signals.py  actor.py  game.py  room.py
pyke_pyxel/sprite/: _compound_sprite.py  _rpg_sprites.py  _sprite.py
scripts/: run-jet.sh  run-rpg.sh  run-td.sh  run-tests.sh  update-docs.sh
skill/pykpyx/: SKILL.md  clean.md  create.md  generate.md  validate.md
skill/pykpyx/docs/: GAME-SPEC-TEMPLATE.md  VALIDATION-CHECKLIST.md
skill/pykpyx/templates/rpg/: game_load.py
tests/: __init__.py  conftest.py  test_animation.py  test_area.py  test_coord.py  test_map.py  test_math.py  test_path_grid.py  test_rpg_sprites.py  test_sprite.py  test_timer.py
