[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyke-pyxel"
version = "0.1.0"
description = "A sprite and map-based game engine built on Pyxel"
requires-python = ">=3.10"
dependencies = [
    "blinker>=1.9.0",
    "pyxel>=2.5.10",
    "pathfinding>=1.0.18",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "pyinstrument>=5.1.1"]

[tool.setuptools.packages.find]
include = ["pyke_pyxel*"]

[tool.setuptools.package-dir]
"" = "."
